# sem-colorer

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/sem_colorer/: cli.py  core.py  gui.py
tests/: __init__.py  big_seg_base_colored_overlay  colors.json  colors_big_colored_no_overlay.json  colors_big_colored_overlay.json  colors_corrected_inter_0.json  colors_corrected_inter_1.json  colors_corrected_inter_3.json  gen_all_colored_sem_npz.sh  gen_colored_sem_npz.sh  test_cli.py  voltages.npz
