[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sem-colorer"
dynamic = ["version"]
description = "SEM SVG Gate Coloring Tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "matplotlib",
    "beautifulsoup4",
    "lxml",
]

[project.scripts]
sem-colorer = "sem_colorer.cli:main"