[setup.cfg]
[metadata]
name = python-cli-module
version = 0.1.0
description = A Python CLI module
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/python-cli-module
license = MIT

[options]
packages = find:
install_requires =
    click

[options.entry_points]
console_scripts =
    mymodule = mymodule.cli:main

[options.packages.find]
where = src