[metadata]
name = sem-colorer
version = 0.1.0
description = SEM SVG Gate Coloring Tool
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/sem-colorer
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    matplotlib
    beautifulsoup4
    lxml
    PyQt6
    PyQt6-Qt6

[options.packages.find]
where = src